@startuml

title __UTIL's Class Diagram__\n

  namespace zuke.com.qxapp {
    namespace Util {
      class zuke.com.qxapp.Util.ClearEditText {
          - context : Context
          - hasFocus : boolean
          - mClearDrawable : Drawable
          + ClearEditText()
          + ClearEditText()
          + ClearEditText()
          + afterTextChanged()
          + beforeTextChanged()
          + onFocusChange()
          + onTextChanged()
          + onTouchEvent()
          + setShakeAnimation()
          {static} + shakeAnimation()
          - init()
          - setClearIconVisible()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Util {
      class zuke.com.qxapp.Util.NoScrollViewPager {
          - NoScroll : boolean
          + NoScrollViewPager()
          + NoScrollViewPager()
          + onInterceptTouchEvent()
          + onTouchEvent()
          + scrollTo()
          + setCurrentItem()
          + setCurrentItem()
          + setNoScroll()
      }
    }
  }
  

  zuke.com.qxapp.Util.ClearEditText .up.|> android.text.TextWatcher
  zuke.com.qxapp.Util.ClearEditText .up.|> android.view.View.OnFocusChangeListener
  zuke.com.qxapp.Util.ClearEditText -up-|> androidx.appcompat.widget.AppCompatEditText
  zuke.com.qxapp.Util.NoScrollViewPager -up-|> androidx.viewpager.widget.ViewPager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
